--- a/index.html
+++ b/index.html
@@ -1,41 +1,18 @@
 <!doctype html>
 <html>
 	<head>
+        <title>Random quote plugin, with external JSON file.</title>
 	</head>
 	<body>
-		<h1>Test Json Quote</h1>
-		<blockquote>
-			<p id="quote">
+		<h1>Random quote plugin, with external JSON file.</h1>
+        <!-- Just add an empty blockquote with class="quote" to display an awesome quote ! -->
+		<blockquote class="quote">
+			<p>
             </p>
-            <footer id="author">
+            <footer>
             </footer>
 		</blockquote>
         <script src="jquery.js"></script>
-        <script>
-            var req = new XMLHttpRequest();
-            req.open("GET", "quote.json", true); 
-            req.onreadystatechange = monCode;   // la fonction de prise en charge
-            req.send(null);
-            function monCode(){
-                console.log(req);
-            }
-            /*$(document).ready(function (){
-
-                $.getJSON("quote.json", function(json) {
-                    $('blockquote p').html(quote[nb].text);
-                    $('blockquote footer').html(quote[nb].author);
-                });
-            });
-            var quote = [
-                { "text":"It takes a great deal of bravery to stand up to your enemies, but a great deal more to stand up to your friends.", "author":"Dumbledore" },
-                { "text":"Do, or do not. There is no try.", "author":"Yoda" },
-                { "text":"I know I have a heart because I feel it breaking.", "author":"Wizard of Oz" },
-                { "text":"My precious.", "author":"Gollum" }
-                ];
-            var i= quote.length;
-            var nb = Math.floor(Math.random() * i);
-            console.log(i, nb);*/
-
-        </script>
+        <script src="quote.js"></script>
 	</body>
 </html>
